# cmake-ssgmono-prototype

./: CMakeLists.txt  CMakePresets.json  README.md
projects/project_a/: CMakeLists.txt
projects/project_a/export/: subproject-config.cmake.in  subproject-targets.cmake.in
projects/project_a/inc/: library_a.hpp
projects/project_a/src/: library_a.cpp
projects/project_b/: CMakeLists.txt
projects/project_b/inc/: library_b.hpp
projects/project_c/: CMakeLists.txt
projects/project_c/export/: config.cmake.in
projects/project_c/inc/: project_headers.hpp
projects/project_c/src/: main.cpp
projects/ssgmono_project/: CMakeLists.txt
projects/ssgmono_project/cmake/: SsgCMakeUtils.cmake  SsgProjectBase.cmake  SsgProjectPackageUtils.cmake
projects/ssgmono_project/cmake/SsgProjectPackageUtils/: subproject-config-init.cmake.in  subproject-targets-init.cmake.in
projects/ssgmono_project/export/: subproject-config.cmake.in
